# polaris_ws

./: .gitignore  2023-12-27-11-59-29.bag  2023-12-28-12-21-50.bag  2023-12-28-15-04-45.bag  2023-12-28-15-11-15.bag  2024-01-03-10-34-09.bag  2024-01-10-13-21-23.bag  2024-01-10-13-27-42.bag  2024-01-10-13-31-15.bag  2024-01-10-13-32-13.bag  2024-01-10-13-33-34.bag  2024-01-10-13-39-27.bag  2024-01-11-15-25-39.bag  2024-01-11-15-26-06.bag  2024-01-11-15-26-35.bag  2024-01-12-14-39-07.bag  2024-01-12-14-44-39.bag  2024-01-12-14-46-15.bag  2024-01-12-14-48-59.bag  2024-01-12-14-50-37.bag  2024-01-12-14-54-26.bag  2024-01-12-15-01-28.bag  2024-01-12-15-09-41.bag  2024-01-12-16-06-04.bag  2024-01-12-16-08-24.bag  2024-01-12-16-10-47.bag  2024-01-12-16-12-26.bag  2024-01-12-16-13-51.bag  2024-01-12-16-15-41.bag  2024-01-15-08-21-57.bag  2024-01-15-08-27-34.bag  2024-01-15-08-53-40.bag  2024-01-15-08-57-49.bag  2024-01-15-09-00-09.bag  2024-01-15-09-20-55.bag  2024-01-15-09-25-19.bag  2024-01-15-09-32-42.bag  2024-01-15-09-35-08.bag  2024-01-15-12-02-24.bag  2024-01-15-12-03-43.bag  (+145 more)
Actuator Models Calibration/: DecodeEPECData.m  EncTrnRadConvCoeff.mat  ExtractData.m  StrEncConvCoeff.mat
src/: .cproject
src/ekf_node/: CMakeLists.txt  package.xml  packageInfo.mat
src/ekf_node/include/ekf_node/: EKFCorrectorAdditive.h  EKF_Node.h  EKF_Node_data.h  EKF_Node_initialize.h  EKF_Node_rtwutil.h  EKF_Node_terminate.h  EKF_Node_types.h  Publisher.h  Subscriber.h  atv_can_OdometryMeasurementStruct.h  atv_can_SpeedandSteeringCommandsStruct.h  atv_can_SteeringMeasurementStruct.h  atv_can_WheelDisplacementMeasurementStruct.h  aug_dynamic_model.h  cholPSD.h  cosd.h  diag.h  enu2lla.h  eul2quat.h  extendedKalmanFilter.h  geometry_msgs_PoseStruct.h  geometry_msgs_TwistWithCovarianceStruct.h  intpol_codegen.h  lla2enu.h  measurement_model2.h  mlroscpp_msgconvert_utils.h  mtimes.h  myInterpolator2.h  quat2eul.h  ros_structmsg_conversion.h  rtGetInf.h  rtGetNaN.h  rt_defines.h  rt_nonfinite.h  rtwtypes.h  sensor_msgs_NavSatFixStruct.h  sensor_msgs_NavSatStatusStruct.h  sind.h  std_msgs_HeaderStruct.h  svd.h  (+12 more)
src/ekf_node/src/: CoderTimeAPI.cpp  EKFCorrectorAdditive.cpp  EKF_Node.cpp  EKF_Node_data.cpp  EKF_Node_initialize.cpp  EKF_Node_rtwutil.cpp  EKF_Node_terminate.cpp  Publisher.cpp  Rate.cpp  Subscriber.cpp  atv_can_OdometryMeasurementStruct.cpp  atv_can_SpeedandSteeringCommandsStruct.cpp  atv_can_SteeringMeasurementStruct.cpp  atv_can_WheelDisplacementMeasurementStruct.cpp  aug_dynamic_model.cpp  cholPSD.cpp  cosd.cpp  diag.cpp  enu2lla.cpp  eul2quat.cpp  extendedKalmanFilter.cpp  geometry_msgs_PointStruct.cpp  geometry_msgs_PoseStruct.cpp  geometry_msgs_PoseWithCovarianceStruct.cpp  geometry_msgs_QuaternionStruct.cpp  geometry_msgs_TwistStruct.cpp  geometry_msgs_TwistWithCovarianceStruct.cpp  geometry_msgs_Vector3Struct.cpp  intpol_codegen.cpp  lla2enu.cpp  main.cpp  measurement_model2.cpp  mtimes.cpp  myInterpolator2.cpp  nav_msgs_OdometryStruct.cpp  quat2eul.cpp  ros_TimeStruct.cpp  ros_structmsg_conversion.cpp  rtGetInf.cpp  rtGetNaN.cpp  (+22 more)
src/nmpc_node/: CMakeLists.txt  package.xml  packageInfo.mat
src/nmpc_node/include/nmpc_node/: BFGSUpdate.h  NMPC_Node.h  NMPC_Node_data.h  NMPC_Node_initialize.h  NMPC_Node_internal_types.h  NMPC_Node_internal_types1.h  NMPC_Node_internal_types2.h  NMPC_Node_rtwutil.h  NMPC_Node_terminate.h  NMPC_Node_types.h  PresolveWorkingSet.h  Publisher.h  ServiceClient.h  Subscriber.h  addAeqConstr.h  addBoundToActiveSetMatrix_.h  all.h  anonymous_function.h  atv_can_DriveServiceRequestStruct.h  atv_can_DriveServiceResponseStruct.h  checkStoppingAndUpdateFval.h  checkVectorNonFinite.h  computeComplError.h  computeFval.h  computeFval_ReuseHx.h  computeGradLag.h  computeGrad_StoreHx.h  computeLambdaLSQ.h  computeLinearResiduals.h  computeMeritFcn.h  computePrimalFeasError.h  computeQ_.h  compute_deltax.h  countsort.h  custom_cost_dynamic.h  deleteColMoveEnd.h  driver.h  driver1.h  dynamic_model_nmpc.h  evalObjAndConstr.h  (+56 more)
src/nmpc_node/src/: BFGSUpdate.cpp  CoderTimeAPI.cpp  NMPC_Node.cpp  NMPC_Node_data.cpp  NMPC_Node_initialize.cpp  NMPC_Node_rtwutil.cpp  NMPC_Node_terminate.cpp  PresolveWorkingSet.cpp  Publisher.cpp  Rate.cpp  ServiceClient.cpp  Subscriber.cpp  addAeqConstr.cpp  addBoundToActiveSetMatrix_.cpp  all.cpp  atv_can_DriveServiceRequestStruct.cpp  atv_can_DriveServiceResponseStruct.cpp  checkStoppingAndUpdateFval.cpp  checkVectorNonFinite.cpp  computeComplError.cpp  computeFval.cpp  computeFval_ReuseHx.cpp  computeGradLag.cpp  computeGrad_StoreHx.cpp  computeLambdaLSQ.cpp  computeLinearResiduals.cpp  computeMeritFcn.cpp  computePrimalFeasError.cpp  computeQ_.cpp  compute_deltax.cpp  countsort.cpp  custom_cost_dynamic.cpp  deleteColMoveEnd.cpp  driver.cpp  driver1.cpp  dynamic_model_nmpc.cpp  evalObjAndConstr.cpp  evalObjAndConstrAndDerivatives.cpp  factorQR.cpp  factoryConstruct.cpp  (+57 more)
steering_comparison/: P_10_DZ_20_21_hys_2_new_controller.bag  P_10_DZ_20_21_hys_2_new_controller_V2.bag  P_15_DZ_20_21_hys_2_new_controller.bag  P_15_DZ_20_21_hys_2_new_controller_V2.bag  P_15_DZ_20_21_hys_2_old_controller.bag
steering_tuning/: P_15_DZ_21_25.bag  P_15_DZ_21_25_V2.bag  P_20_DZ_20.bag  P_20_DZ_20_23.bag  P_20_DZ_20_27_V2.bag  P_20_DZ_20_27_V3.bag  P_20_DZ_20_V2.bag  P_20_DZ_20_V3.bag  P_20_DZ_20_V4.bag  P_20_DZ_21.bag  P_20_DZ_21_23.bag  P_20_DZ_21_23_V2.bag  P_20_DZ_21_25.bag  P_20_DZ_22_V4.bag  P_20_DZ_22_V5.bag  P_20_DZ_22_V6.bag  P_20_DZ_22_hys_0.5__0.2.bag
steering_tuning_13/: P_10_DZ_20_20_hys_2.bag  P_10_DZ_20_24_hys_0.5.bag  P_10_DZ_20_26_hys_0.5.bag  P_17_DZ_20_21_hys_2_I_0.1_zeroing.bag  P_20_DZ_18_21_hys_0_I_0.1_zeroing.bag  P_20_DZ_19_20_I_0.5_hys_0.1.bag  P_20_DZ_19_20_I_0.5_hys_0.1_V2.bag  P_20_DZ_19_20_I_0.5_hys_0.1_reset_int.bag  P_20_DZ_19_22_I_0.5_hys_0.1.bag  P_20_DZ_19_23_I_0.5.bag  P_20_DZ_19_23_I_0.5_hys_0.1.bag  P_20_DZ_19_24_I_0.5.bag  P_20_DZ_20_19_hys_2_I_0.1.bag  P_20_DZ_20_19_hys_2_I_0.1_zeroing.bag  P_20_DZ_20_19_hys_2_V2.bag  P_20_DZ_20_20_hys_2.bag  P_20_DZ_20_20_hys_2_V2.bag  P_20_DZ_20_21_hys_0.1_noset.bag  P_22_DZ_20_24.bag  (+5 more)
(+205 files in other folders)
